fix(bug): fix non display of filter section on mobile view - add button to display filter div - add button to hide filter div when closing the div - modify navigation.js with methods to enable the function
[Starts 165969270]

--- a/UI/css/style2.css
+++ b/UI/css/style2.css
@@ -7,7 +7,7 @@ aside {
     position: fixed;
     top: 0;
     left: 0;
-    width: 30%;
+    width: 25%;
     height: 100vh;
     box-shadow: 4px 6px 2px 2px rgba( 50, 50, 50, 1);
     -o-box-shadow: 4px 6px 2px 2px rgba( 50, 50, 50, 1);
@@ -92,11 +92,16 @@ aside>div>nav>li>a:active {
 }
 
 main {
-    padding-left: 35px;
-    margin-left: 30%;
-    width: 70%;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-gap: 0;
+    grid-template-areas: "header header" "body section";
+    padding-left: 15px;
+    margin-left: 25%;
+    width: 75%;
     color: rgba(144, 12, 63);
-    padding-top: 50px;
+    padding-top: 0px;
+    padding: 10px;
 }
 
 body>nav {
@@ -104,32 +109,27 @@ body>nav {
 }
 
 main>h1 {
-    margin: 20px 0;
+    margin: 10px 0;
     padding: 10px;
     text-transform: uppercase;
+    grid-area: header;
 }
 
 main>section {
-    position: fixed;
-    top: 10px;
-    right: 5px;
     border: 1px solid rgb(206, 230, 231);
     border-top: 3px solid rgba(144, 12, 63);
     background-color: white;
     padding: 10px;
-    width: 18%;
-}
-
-main>div {
-    margin-top: 10px;
-    display: flex;
-    flex-flow: row wrap;
-    width: 75%;
+    /* margin-left: 10px; */
+    /* width: 18%; */
+    height: 450px;
+    grid-area: section;
 }
 
 main>section>div>form {
     display: flex;
     flex-flow: column wrap;
+    /* width:100%; */
 }
 
 main>section>div>form>li {
@@ -160,29 +160,44 @@ main>section>div>form>li>select>option {
     cursor: pointer;
 }
 
+main>div {
+    margin-top: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    align-self: center;
+    justify-content: space-between;
+    padding: 10px;
+    grid-area: body;
+}
+
 .card {
     box-shadow: 4px 6px 5px 1px rgba( 50, 50, 50, 1);
     -o-box-shadow: 4px 6px 5px 1px rgba( 50, 50, 50, 1);
     -ms-box-shadow: 4px 6px 5px 1px rgba( 50, 50, 50, 1);
     -moz-box-shadow: 4px 6px 5px 1px rgba( 50, 50, 50, 1);
     -webkitbox-shadow: 4px 6px 5px 1px rgba( 50, 50, 50, 1);
-    flex: 0 0 140px;
-    margin: 0 15px 15px 0;
+    flex: 0 0 170px;
+    margin: 0 0 15px 0;
     cursor: pointer;
     display: flex;
     flex-flow: column nowrap;
 }
 
 .card>div:nth-child(1) {
-    width: 140px;
-    height: 140px;
+    width: 170px;
+    height: 170px;
     overflow: hidden;
+}
+
+.card>div:nth-child(1)>img {
+    width: auto;
+    height: 100%;
 }
 
 .card>div:nth-child(2) {
     display: flex;
     flex-flow: column wrap;
-    padding: 2px;
+    padding: 10px;
 }
 
 .card>div:nth-child(2)>span:nth-child(1) {
@@ -200,10 +215,10 @@ div.card>span {
     color: rgba(144, 12, 63);
 }
 
-img {
+/* img {
     width: 100%;
     height: auto;
-}
+} */
 
 /* Style for viewing a particular car */
 
@@ -212,7 +227,6 @@ main>div#single-car {
     margin-top: 15px;
     width: 100%;
     justify-content: center;
-    padding: 20px;
     flex-flow: column nowrap;
 }
 
@@ -227,6 +241,11 @@ main>div#single-car>div:nth-child(1)>div:first-child, main>div#single-car>div:nt
     flex: 1 0 auto;
     height: 250px;
     overflow: hidden;
+}
+
+main>div#single-car>div:nth-child(1)>div:first-child>img {
+    width: 75%;
+    height: auto;
 }
 
 main>div#single-car>div:nth-child(1)>div:nth-child(2) {
@@ -330,22 +349,24 @@ div#make-purchase-order {
 div#make-purchase-order>div:last-child {
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
+    justify-content: space-between;
     align-self: flex-end;
-    align-items: center;
+    align-items: baseline;
     margin-top: 15px;
     margin-left: auto;
 }
 
 div#make-purchase-order input[type=number] {
-    width: 200px;
+    width: 150px;
     height: 100%;
     padding: 16px 32px;
-    margin: 6px 6px;
+    /* margin: 6px 6px; */
 }
 
 div#make-purchase-order button {
-    width: 200px;
+    width: 50px;
+    margin: 0;
 }
 
 div#current-purchase-order-div {
@@ -390,12 +411,15 @@ span.is-sold-span {
     display: none;
 }
 
+.mobile-view {
+    display: none;
+}
+
 /* Responsive design*/
 
 @media screen and (max-width: 1150px) {
     body>nav {
         border-bottom: 3px solid rgba(144, 12, 63);
-        border-radius: 0.5em;
     }
     .card {
         flex: 0 0 100px;
@@ -415,22 +439,22 @@ span.is-sold-span {
     }
     main>div#single-car>div:first-child {
         display: flex;
-        flex-flow: row nowrap;
-    }
-    main>div#single-car>div:nth-child(1)>div:first-child, main>div#single-car>div:nth-child(1)>div:last-child {
-        flex: 1 0 auto;
-        height: 250px;
         border: 1px solid black;
+        flex-flow: row nowrap;
         overflow: hidden;
     }
-    main>div#single-car>div:nth-child(1)>div:nth-child(2) {
-        flex: 1 0 300px;
+    main>div#single-car>div:nth-child(1)>div {
+        flex: 1 0 auto;
         height: 300px;
-        margin: 0 5px;
+        /* margin: 0 5px; */
         overflow: hidden;
-        -webkit-box-shadow: 0px 0px 10px #000;
-        -moz-box-shadow: 0px 0px 10px #000;
-        box-shadow: 0px 0px 10px #000;
+    }
+    main>div#single-car>div:nth-child(1)>div img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: auto;
     }
     main>div#single-car>div:nth-child(2) {
         display: flex;
@@ -456,7 +480,12 @@ span.is-sold-span {
     /* End of style for a single car*/
 }
 
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 601px) {
+    main {
+        display: flex;
+        flex-flow: column nowrap;
+    }
     /* Style for viewing a particular car */
     main>div#single-car {
         width: 100%;
@@ -468,9 +497,9 @@ span.is-sold-span {
         flex-flow: row nowrap;
         margin-top: 15px;
     }
-    main>div#single-car>div:nth-child(1)>div:first-child, main>div#single-car>div:nth-child(1)>div:last-child {
+    /* main>div#single-car>div:nth-child(1)>div:first-child, main>div#single-car>div:nth-child(1)>div:last-child {
         display: none;
-    }
+    } */
     main>div#single-car>div:nth-child(1)>div:nth-child(2) {
         flex: 1 0 auto;
         height: 300px;
@@ -480,11 +509,22 @@ span.is-sold-span {
         box-shadow: 0px 0px 10px #000;
     }
     /* End of style for a single car*/
-}
+    /* Filter style*/
+    .open-filter {
+        color:blue;
+        display: 'block';
+        /* position: 'absolute';
+        top: '0';
+        left: '0';
+        width: '100%';
+        height: '100vh'; */
+    }
 
-@media screen and (max-width: 600px) {
     aside {
         display: none;
+    }
+    .mobile-view {
+        display: block;
     }
     aside>div>span:first-child {
         display: block;
@@ -504,13 +544,11 @@ span.is-sold-span {
         position: fixed;
         top: 0px;
         width: 100%;
-        width: calc( 100% - 10px);
         padding: 10px;
     }
     body>nav>span {
         display: block;
-        margin-left: 10px;
-        padding: 20px;
+        padding: 5px;
         color: rgba(144, 12, 63);
         font-weight: bolder;
         font-size: 2em;
@@ -527,31 +565,28 @@ span.is-sold-span {
     }
     main>div {
         width: 100%;
-        margin-left: 10px;
     }
     .card {
-        flex: 0 0 120px;
-        margin-left: 10px;
+        flex: 1 0 100%;
+        /* margin-left: 10px; */
         align-content: flex-start;
     }
     .card>div:nth-child(1) {
-        width: 120px;
-        height: 120px;
+        width: 100%;
+        height: 350px;
+    }
+    .card>div:nth-child(1)>img {
+        width: 100%;
+        height: auto;
     }
 }
 
-@media screen and (max-width: 420px) {
+@media (max-width: 420px) {
     main>div {
         justify-content: center;
     }
-    .card {
-        flex: 0 0 250px;
-        margin: 0 15px 15px 0;
-        cursor: pointer;
-    }
     .card>div:nth-child(1) {
-        width: 250px;
-        height: 250px;
-        /* overflow: hidden; */
+        width: 100%;
+        height: 200px;
     }
 }
